docs: update layput style

--- a/docs/themes/invincible/source/css/_index.scss
+++ b/docs/themes/invincible/source/css/_index.scss
@@ -2,9 +2,35 @@
   padding-top: 80px;
   text-align: center;
   .h1 {
-    margin-bottom: 50px;
+    position: relative;
+    margin: 0 auto 50px auto;
     font-size: 60px;
     font-weight: 200;
+    display: table;
+    &::after {
+      @include absolute(0 auto 0 0);
+      content: '';
+      display: block;
+      background: #fff;
+      width: 5px;
+      transform: rotate(30deg);
+      animation: animate 4s infinite;
+
+      @keyframes animate {
+        0% {
+          left: -15px;
+        }
+        33% {
+          left: -15px;
+        }
+        66% {
+          left: 110%;
+        }
+        100% {
+          left: 110%;
+        }
+      }
+    }
   }
   .h2 {
     margin-top: 25px;
