fix: resolve github io compatible url

--- a/docs/themes/invincible/layout/_partial/footer.ejs
+++ b/docs/themes/invincible/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
       <div class="col-md-6 col-right">
         Released under the MIT license
         <a href="https://github.com/chikara-chan/invincible">
-          <img class="img" src="/img/GitHub-Mark-32px.png"/>
+          <img class="img" src="<%= url_for('/img/GitHub-Mark-32px.png') %>"/>
         </a>
       </div>
     </div>
