--- a/docs/themes/invincible/layout/layout.ejs
+++ b/docs/themes/invincible/layout/layout.ejs
@@ -14,5 +14,6 @@
     <main class="main"><%- body %></main>
     <%- partial('_partial/footer') %>
   </div>
+  <%- js('js/script') %>
 </body>
 </html>
