--- a/docs/themes/invincible/layout/_partial/sidebar.ejs
+++ b/docs/themes/invincible/layout/_partial/sidebar.ejs
@@ -1,17 +1,17 @@
 <aside class="sidebar">
   <ul class="item-list">
     <li class="item">
-      <a class="link" href="/api/">
+      <a class="link" href="<%= url_for('/api') %>">
         <h3><%= __('cat.overview') %></h3>
       </a>
     </li>
     <li class="item">
-      <a class="link" href="/api/invariant.html">
+      <a class="link" href="<%= url_for('/api/invariant.html') %>">
         <%= __('cat.invariant') %>
       </a>
     </li>
     <li class="item">
-      <a class="link" href="/api/todo.html">
+      <a class="link" href="<%= url_for('/api/todo.html') %>">
         <%= __('cat.todo') %>
       </a>
     </li>
