--- a/docs/themes/invincible/layout/index.ejs
+++ b/docs/themes/invincible/layout/index.ejs
@@ -3,7 +3,7 @@
   <h2 class="h2"><%= config.subtitle %></h2>
   <h2 class="h2">Fast & Simple & Powerful</h2>
   <div class="btn-group">
-    <a href="/api" class="btn btn-primary">开始使用</a>
+    <a href="<%= url_for('/api') %>" class="btn btn-primary">开始使用</a>
     <a href="https://github.com/chikara-chan/invincible" class="btn">GitHub</a>
   </div>
 </div>
