--- a/docs/themes/invincible/layout/_partial/sidebar.ejs
+++ b/docs/themes/invincible/layout/_partial/sidebar.ejs
@@ -11,6 +11,11 @@
       </a>
     </li>
     <li class="item">
+      <a class="link" href="<%= url_for('/api/isplainobject.html') %>">
+        <%= __('cat.isplainobject') %>
+      </a>
+    </li>
+    <li class="item">
       <a class="link" href="<%= url_for('/api/todo.html') %>">
         <%= __('cat.todo') %>
       </a>
