docs: hexo build docs

--- a/docs/themes/invincible/layout/_partial/sidebar.ejs
+++ b/docs/themes/invincible/layout/_partial/sidebar.ejs
@@ -11,8 +11,18 @@
       </a>
     </li>
     <li class="item">
-      <a class="link" href="<%= url_for('/api/isplainobject.html') %>">
-        <%= __('cat.isplainobject') %>
+      <a class="link" href="<%= url_for('/api/isPlainObject.html') %>">
+        <%= __('cat.isPlainObject') %>
+      </a>
+    </li>
+    <li class="item">
+      <a class="link" href="<%= url_for('/api/parseDate.html') %>">
+        <%= __('cat.parseDate') %>
+      </a>
+    </li>
+    <li class="item">
+      <a class="link" href="<%= url_for('/api/formatDate.html') %>">
+        <%= __('cat.formatDate') %>
       </a>
     </li>
     <li class="item">
