docs: add getURLParams docs

--- a/docs/themes/invincible/layout/_partial/sidebar.ejs
+++ b/docs/themes/invincible/layout/_partial/sidebar.ejs
@@ -26,6 +26,11 @@
       </a>
     </li>
     <li class="item">
+      <a class="link" href="<%= url_for('/api/getURLParams.html') %>">
+        <%= __('cat.getURLParams') %>
+      </a>
+    </li>
+    <li class="item">
       <a class="link" href="<%= url_for('/api/todo.html') %>">
         <%= __('cat.todo') %>
       </a>
