--- a/docs/themes/invincible/source/css/_layout.scss
+++ b/docs/themes/invincible/source/css/_layout.scss
@@ -3,6 +3,7 @@
   @import '_partial/header';
 
   .main {
+    position: relative;
     min-height: calc(100vh - 120px);
     padding: 40px 0;
     @import 'index';
