docs: add new docs for accessCookie

--- a/docs/themes/invincible/layout/_partial/sidebar.ejs
+++ b/docs/themes/invincible/layout/_partial/sidebar.ejs
@@ -6,8 +6,8 @@
       </a>
     </li>
     <li class="item">
-      <a class="link" href="<%= url_for('/api/invariant.html') %>">
-        <%= __('cat.invariant') %>
+      <a class="link" href="<%= url_for('/api/assert.html') %>">
+        <%= __('cat.assert') %>
       </a>
     </li>
     <li class="item">
@@ -28,6 +28,11 @@
     <li class="item">
       <a class="link" href="<%= url_for('/api/getURLParams.html') %>">
         <%= __('cat.getURLParams') %>
+      </a>
+    </li>
+    <li class="item">
+      <a class="link" href="<%= url_for('/api/accessCookie.html') %>">
+        <%= __('cat.accessCookie') %>
       </a>
     </li>
     <li class="item">
