--- a/docs/themes/invincible/layout/_partial/footer.ejs
+++ b/docs/themes/invincible/layout/_partial/footer.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        Copyright &copy; 2017 Chikara Chan
+        Copyright &copy; 2017 playplane.com
       </div>
       <div class="col-md-6 col-right">
         Released under the MIT license
