--- a/docs/themes/invincible/source/css/_index.scss
+++ b/docs/themes/invincible/source/css/_index.scss
@@ -10,16 +10,13 @@
     animation: shake 0.2s infinite;
 
     &:hover {
-      animation: dangle 1s forwards;
+      animation: dangle 0.3s forwards infinite linear;
     }
 
     @keyframes dangle {
-      0% {
-        transform-origin: 10% 50%;
-      }
       100% {
-        transform: rotate(90deg);
-        transform-origin: 10% 50%;
+        transform: rotate(360deg) scale(3);
+        z-index: 100;
       }
     }
 
