--- a/css/style.css
+++ b/css/style.css
@@ -1632,14 +1632,12 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
         display: table;
         animation: shake 0.2s infinite; }
         .root .main .section-main .h1:hover {
-          animation: dangle 1s forwards; }
+          animation: dangle 0.3s forwards infinite linear; }
 
 @keyframes dangle {
-  0% {
-    transform-origin: 10% 50%; }
   100% {
-    transform: rotate(90deg);
-    transform-origin: 10% 50%; } }
+    transform: rotate(360deg) scale(3);
+    z-index: 100; } }
 
 @keyframes shake {
   0% {
